--- a/bibs.bib
+++ b/bibs.bib
@@ -2613,3 +2613,9 @@ url={https://github.com/moby/moby/issues/28405},
 @misc{goexit-line-of-code,
 url={https://golang.org/src/runtime/proc.go?s=98638:98652#L3409},
 }
+
+@misc{iiswc_goat_visualizations,
+title={Supporting Material for IISWC submission},
+author={GOAT},
+url={https://anonymous.4open.science/r/iiswc_goat_visualizations},
+}
