--- a/paper-goat.tex
+++ b/paper-goat.tex
@@ -30,6 +30,7 @@
 \usepackage{amsthm}
 \usepackage{amssymb}
 \usepackage{pdfrender}
+\usepackage{subcaption}
 
 % If you use beamer only pass "xcolor=table" option, i.e. \documentclass[xcolor=table]{beamer}
 \usepackage[normalem]{ulem}
@@ -50,7 +51,7 @@
 \begin{document}
 
 
-\title{\goat: Automated Concurrency Analysis and Debugging Tool for Go}
+\title{\goat: Automated Concurrency Analysis and Debugging Tool for Go\\Paper Type: Tool / Benchmark}
 
 
 %\author{\IEEEauthorblockN{Saeed Taheri}
