--- a/abstract.tex
+++ b/abstract.tex
@@ -1,20 +1,20 @@
-The use of increasing levels of parallelism and concurrency in system
-design---especially in a feature-rich language such as Go---demands
+The use of increasing levels of parallelism and concurrency in the system
+design\textemdash especially in a feature-rich language such as Go\textemdash demands
 effective concurrency debugging techniques that are easy to deploy in practice.
 %
 We present \goat, a combined static and dynamic concurrency testing
-and analysis tool that facilitate the process of debugging for real-world programs.
+and analysis tool that facilitates the process of debugging for real-world programs.
 %
 Key ideas in \goat include
 1) automated dynamic tracing to capture the behavior of concurrency primitives,
-2) systematic schedule space exploration to accelerate the bug occurance
+2) systematic schedule space exploration to accelerate the bug occurrence
 and 3) deadlock detection with supplementary visualizations and reports.
-We also propose a set of coverage requirements that characeterize the dynamic behavior of concurrency primitives and provide metrics to measure the quality of tests.
+We also propose a set of coverage requirements that characterize the dynamic behavior of concurrency primitives and provide metrics to measure the quality of tests.
 %
-Our evaluation on 68 curated real-world bug scenarios
-demonstrates that GoAT is significantly effective in detecting
+Evaluation of \goat on 68 curated real-world bug scenarios
+demonstrates that \goat is significantly effective in detecting
 rare bugs, and its schedule perturbation method based on schedule
 yielding detects these bugs with less than three yields.
 %
-These results together with the ease of deploying GoAT on real-world
-Go programs holds significant promise in field-debugging of Go programs.
+These results together with the ease of deploying \goat on real-world
+Go programs hold significant promise in the field-debugging of Go programs.
