--- a/design.tex
+++ b/design.tex
@@ -2,9 +2,7 @@
 \label{sec:overview}
 Figure \ref{fig:goat_workflow} displays the overview of \goat.
 %
-Given a program \textbf{P} (\ie, a set of Go source files with a \textit{main} function), \goat automatically instruments \textbf{P} and constructs static and dynamic models of execution for thorough testing and analysis.
-%
-Our main goal in \goat is to facilitate the investigation of \textit{non-deterministic interactions between concurrent components} (\ie, concurrent behavior) of \textbf{P} to achieve objectives acquainted in section \ref{sec:intro}.
+Given a program \textbf{P} (\ie, a set of Go source files with a \textit{main} function), \goat automatically instruments \textbf{P} and constructs static and dynamic models to facilitate the investigation of \textit{non-deterministic interactions between concurrent components} (\ie, concurrent behavior) of \textbf{P}, and achieve objectives acquainted in section \ref{sec:intro}.
 %
 \\
 \noindent{\bf Static Analysis:\/} (section \ref{sec:static_analysis})---
@@ -34,7 +32,7 @@ When tracing is enabled, an \textit{execution concurrency trace} (ECT) file is g
 ECT is a totally ordered \textit{sequence} of events that contain information about the dynamic behavior concurrent components, enabling offline analysis of \textbf{P}'s execution.
 \\
 \noindent{\bf Offline Analysis:\/} (section \ref{sec:offline_analysis})---
-In offline, \goat first, separates the application-level events of ECT from the underlying runtime system of Go.
+In offline, \goat first separates the application-level events of ECT from the underlying runtime system of Go.
 %
 Then, it constructs a goroutine tree from application-level goroutines to check if any goroutine has leaked/blocked (\ie, did not reach its final state) after the execution termination.
 %
@@ -74,7 +72,7 @@ First, we traverse the AST of \textbf{P} and inject three statements (\ie, AST n
   \item \texttt{defer goat.Stop(goat\_done)} sends a value to the watcher goroutine after main returns and signals that the program is finished. Then it waits to receive the signal from the watcher, then stops tracing and terminates.
 \end{itemize}
 
-Moreover, we inject calls to \texttt{goat.handler()} before each CU in \textbf{M} to manipulate the native scheduler around concurrency primitve usages. \texttt{goat.handler()} is a function invocation that randomly calls \texttt{runtime.GoSched()} within a bound $D$ to preempt the processing core from current goroutine and push the goroutine to the back of the global queue of runnable goroutines.
+Moreover, we inject \texttt{goat.handler()} statements before each CU in \textbf{M} to manipulate the native scheduler around concurrency primitve usages. \texttt{goat.handler()} is a function invocation that randomly calls \texttt{runtime.GoSched()} within a bound $D$ to preempt the processing core from current goroutine and push the goroutine to the back of the global queue of runnable goroutines.
 %
 When $D=0$, \goat does not perturb the scheduler and lets \textbf{P} to execute natively. For any $D>0$, \goat manipulates application-level goroutines from their regular execution D times.
 %
@@ -89,14 +87,14 @@ Based on our investigations from the execution of Go applications and bug kernel
   \item \textbf{Req2 (Select-Case):} \{\texttt{blocked}, \texttt{unblocking}, \texttt{NOP}\} $\times$ \{\texttt{case}$_i$\} -- cases of select statements are channel sends and recives (or default case for non-blocking selects). For all select statements that has no default case, we obtain the cases of each select statement at runtime and maintain an instance of Req1 per case.
   \item \textbf{Req3 (Lock):} \{\texttt{blocked}, \texttt{blocking}\} -- Goroutine $G_i$ is either \textit{blocked} when locking a mutex because another goroutine has locked the mutex or \textit{blocking} other goroutines from acquiring the mutex lock.
   \item \textbf{Req4 (Unblocking):} \{\texttt{unblocking}, \texttt{NOP}\} -- The goroutine that is performing channel close, mutex unlock, conditional variable signal and broadcast, waitGroup done, and non-blocking select case (send or receive) either \textit{unblocks} one or more blocked goroutines or has no effect (NOP).
-  \item \textbf{Req5-Go:} \{\texttt{NOP}\} -- We emit a NOP action for each goroutine creation to indicate that it is covered during testing.
+  \item \textbf{Req5-Go:} \{\texttt{NOP}\} -- We emit a NOP action for each goroutine creation to indicate its coverage during testing.
 \end{itemize}
 
 
 \begin{table}[]
 \centering
 \caption{Coverge requirements defined for concurrent Go}
-\scalebox{0.83}{
+\scalebox{0.75}{
 \input{tabs/coverage_requirements.tex}
 }
 \label{tab:cov_req}
@@ -107,8 +105,8 @@ With the help of \goat's infrastructure, the proposed requirements satisfy the c
 \begin{enumerate}
   \item A \textit{static model} \textbf{M} from program \textbf{P} is obtained by identifying its CU points. \textbf{M} is easy to understand by developers and reflects the concurrent behavior of \textbf{P}.
   \item The defined requirements are \textit{measurable} by analyzing the test's ECT. A global data structure maintains the covered requirements by each $t \in \mathcal{T}$.
-  \item Upon completion of $\mathcal{T}$ iterations, the \textit{uncovered} requirements imply some \textit{meaningful} information about the behavior of \textbf{P}. For example, if a send is always performing as \textit{unblocking} and never as \textit{blocked}, it means that the receiver always performs receive before the sender reaches its send instruction. In other words, the receive action \textit{always happen-before} send action. This communication pattern might be part of \textbf{P}'s semantics and matches the developer's expectations (e.g., a set of goroutines are listening on a channel to perform non-frequent requests). Otherwise, the uncovered requirement  ``send-\texttt{blocked}'' reflects a bug or flaw in the program design.
-  \item Since \goat can detect occurred blocking bugs and maintain a global coverage model, $\mathcal{T}$ iterations terminate either by detecting a bug or reaching a coverage percentage threshold.
+  \item Upon completion of $\mathcal{T}$ iterations, the \textit{uncovered} requirements imply some \textit{meaningful} information about the behavior of \textbf{P}. For example, if a send is always performing as \textit{unblocking} and never as \textit{blocked}, it means that the receiver always performs receive before the sender reaches its send instruction. In other words, the receive action \textit{always happen-before} send action. This communication pattern might be part of \textbf{P}'s semantics and matches the developer's expectations (e.g., a set of goroutines are listening on a channel to perform non-frequent requests). Otherwise, the uncovered requirement  ``send-\texttt{blocked}'' reflects a bug or flaw in the program.
+  \item Since \goat can detect occurred blocking bugs and maintain a global coverage model, $\mathcal{T}$ iterations terminate either by detecting a bug or reaching a percentage threshold.
 \end{enumerate}
 
 \subsection{Dynamic Concurrency Tracing}
@@ -159,6 +157,14 @@ The enhanced dynamic tracing also enables the measurement of coverage requiremen
 \end{table}
 
 
+\begin{table}[]
+\centering
+\caption{Concurrency Usages and coverage requirements of program in listing\ref{listing:moby28462.minipage}}
+\scalebox{0.82}{
+\input{tabs/moby_coverage_table}
+}
+\label{tab:moby_cov_table}
+\end{table}
 
 \subsection{Offline Analysis}
 \label{sec:offline_analysis}
@@ -180,7 +186,7 @@ These conditions are assessed for every captured goroutine in ECT by checking th
 %
 Nodes in the goroutine tree represent a goroutine, and directed edges denote parent-child relationships in which the child is created from a \texttt{go} statement that the parent executes.
 %
-Each node of the tree contains the entire sequence of events that the goroutine executed (not shown in the figure for simplicity), information about the goroutine's creation site, the resources it holds at each execution point, and the final executed event right before the program termination.
+Each node of the tree contains the entire sequence of events that the goroutine executed~\footnote{The sequence of events per node is not shown in figure \ref{fig:gtree} for simplicity.}, information about the goroutine's creation site, the resources it holds at each execution point, and the final executed event right before the program termination.
 %
 \goat analyzes this collection of information to check whether any goroutine leaked after termination and whether the coverage requirements are covered.
 
@@ -204,11 +210,11 @@ In \goat, the main goroutine's final event in a successful execution is $GoSched
 
 We call an execution \textbf{successful}, if below conditions hold:
 \begin{enumerate}
-  \item (1) all goroutines spawned in the main goroutine has $GoEnd$ as their final event
-  \item (2) the final event of the main goroutine is $GoSched$ with \texttt{runtime.traceStop} on top of its stack.
+  \item all goroutines spawned in the main goroutine has $GoEnd$ as their final event
+  \item the final event of the main goroutine is $GoSched$ with \texttt{runtime.traceStop} on top of its stack.
 \end{enumerate}
 
-In the absence of any of these conditions, we conclude that the program suffers from a ``deadlock'' bug, because at least one goroutine did not reach its final state.
+In the absence of any of these conditions, we conclude that the program suffers from a ``deadlock'' bug because at least one goroutine did not reach its final state.
 %
 Therefore, \goat executes procedure \ref{proc:deadlockCheck} which is a BFS traversal on the goroutine tree to check if the program suffers from partial or global deadlocks.
 
@@ -245,24 +251,15 @@ Therefore, \goat executes procedure \ref{proc:deadlockCheck} which is a BFS trav
 \end{small}
 
 
-\begin{table}[]
-\centering
-\caption{Concurrency Usages and coverage requirements of program in listing\ref{listing:moby28462.minipage}}
-\scalebox{0.9}{
-\input{tabs/moby_coverage_table}
-}
-\label{tab:moby_cov_table}
-\end{table}
-
 
 %\stcmt{reports and visualizations}
 When a deadlock is detected, \goat generates visualizations such as executed interleaving (listing \ref{listing:moby28462.minipage}) and goroutine tree (figure \ref{fig:gtree}).
 %
 The detailed report magnifies the scenario under which the bug has occurred and displays the final concurrent state of the program right before the failure.
 %
-In addition, custom logs and reports such as the ``happens-before'' log of a set of goroutines and their associated resources are easily generated through a replay of ECT.
-%
-Samples of such reports and visualizations are available in [appendix or online link]
+Samples of such reports and visualizations are available in \cite{iiswc_goat_visualizations}.
+
+
 
 \subsubsection{Coverage Measurement}
 Once the program execution terminates, \goat checks whether the extracted coverage requirements are covered during execution.
@@ -282,17 +279,17 @@ However, equivalencing between two goroutines and their respective coverage vect
 We say two goroutines $G_m$ and $G_n$ in the tests $t_i$ and $t_j$ are \textit{equivalent} (\ie falls into a identical node in the global goroutine tree) if their parents are equivalent and their creation source location (CU of kind \texttt{go}) are identical.
 %
 \begin{equation}
-  G_m \equiv G_n   \text{if}
+  G_m~\equiv~G_n~~\text{if}
   \begin{cases}
-    \text{parent}(G_m) \equiv \text{parent}(G_n)  \wedge \\
-    \text{CU(}G_m\text{).file} = \text{CU(}G_n\text{).file}  \wedge\\
-    \text{CU(}G_m\text{).line} = \text{CU(}G_n\text{).line} \\
+    \text{parent}(G_m)~\equiv~\text{parent}(G_n)~\wedge \\
+    \text{CU(}G_m\text{).file}~=~\text{CU(}G_n\text{).file}~\wedge\\
+    \text{CU(}G_m\text{).line}~=~\text{CU(}G_n\text{).line}~\\
   \end{cases}
 \end{equation}
 
 
 \begin{table*}[]
-\caption{Output of each tool on GoKer \cite{yuan-gobench-cgo21} blocking bugs. Detected bug (minimum \# of executions required) -- \textbf{X (1000)}: the tool is not able to detect any bug after 1000 executions. \textbf{PDL}: Partial Deadlock, \textbf{GDL}: Global Deadlock, \textbf{PDL-k}: Partial Deadlock with \textit{k} number of goroutines leaked. \textbf{DL}: A warning for potential deadlock is issued. \textbf{TO/GDL}: The global deadlock is detected because none of goroutines made any progress after 20 seconds, \textbf{CRASH}: The execution paniced because of a flaw in the execution (e.g., send on closed channel panic), \textbf{HANG}: The tool halt for more than 10 minutes.}
+\caption{Output of each tool on GoKer \cite{yuan-gobench-cgo21} blocking bugs. Detected bug (minimum \# of executions required) -- \textbf{X (1000)}: the tool is not able to detect any bug after 1000 executions. \textbf{PDL}: Partial Deadlock, \textbf{GDL}: Global Deadlock, \textbf{PDL-k}: Partial Deadlock with \textit{k} number of goroutines leaked. \textbf{DL}: A warning for potential deadlock is issued. \textbf{TO/GDL}: The global deadlock is detected because none of goroutines made any progress after 30 seconds, \textbf{CRASH}: The execution paniced because of a flaw in the execution (e.g., send on closed channel panic), \textbf{HANG}: The tool halt for more than 10 minutes.}
 \centering
 \scalebox{0.72}{
     \input{tabs/comparison}
